--- a/Task/Task01.html
+++ b/Task/Task01.html
@@ -7,11 +7,15 @@
             href="https://img.freepik.com/premium-vector/b-letter-abstract-favicon-icon-logo-design_679026-785.jpg"
             type="image/png">
         <style>
-            section div {
+            #section,
+             div {
                 float: left;
-                height: 220px;
+                height: 200px;
                 width: 16.5%;
                 top: 1000px;
+                box-sizing: border-box;
+                font-size: large;
+                height: 200px;
 
             }
 
@@ -33,6 +37,18 @@
                 width: 33.3%;
                 height: 100px;
             }
+            .button {
+                   border: none;
+                   color: white;
+                   padding: 10px 10px;
+                   text-align: center;
+                   text-decoration: none;
+                   display: inline-block;
+                   font-size: 20px;
+                   margin: 4px 4px;
+                   cursor: pointer;
+                }
+                .button {background-color: rgb(255, 0, 64);}
         </style>
     </head>
 
@@ -41,34 +57,28 @@
             <div>
                 <h1 style="font-size: 300%; color: rgb(255, 0, 64);font-style: monaco;"> Kona </h1>
             </div>
-            <div>
-                <h2 style="font-size: 200%;">products</h2>
-            </div>
-            <div>
-                <h2 style="font-size: 200%;">solutions</h2>
-            </div>
-            <div>
-                <h2 style="font-size: 200%;">services</h2>
-            </div>
-            <div>
-                <h2 style="font-size: 200%;">pricing</h2>
-            </div>
-            <div>
-                <h2 style="font-size: 200%; border-radius: 50px; rgb(201, 76, 76); font-weight: bolder;">try for free</h2>
-            </div>
-            p
+            <div><h3>products</h3></div>
+            <div><h3>solution</h3></div>
+            <div><h3>services</h3></div>
+            <div><h3>pricing</h3></div>
+            <button class="button" onclick="alert('try for free')">try for free</button>
         </section>
+
         <section id="id2">
             <div>
                 <h1>Revolutionizing the way India <span style=" color: rgb(236, 11, 11);">LEARNS</span>
-                    <p style="font-size: medium;"> The education system is growing beyond Chalk-and-Talk. The next generation needs advanced
+                    <p style="font-size: 70%;"> The education system is growing beyond Chalk-and-Talk.</p>
+                    <p style="font-size: 70%;"> The next generation needs advanced
                         methods of learning and we are equipping those who empower the genZ </p>
+             <button class="button" onclick="alert('know more')">know more</button>   
+             <button class="button" onclick="alert(' Ask for a free demo')">Ask for a free demo</button>        
             </div>
             </h1>
             <div>
                 <img src="C:\Users\Lenovo\OneDrive\Pictures\Screenshots\kona.png">
             </div>
         </section>
+
         <section id="id3">
             <div>
                 <h1>What is LMS?
@@ -86,10 +96,11 @@
                     same time.</h1>
             </div>
         </section>
+
         <section id="id4">
 
             <div>
-                <h1 style=" font-size: 150%; text-align: right;"></h1>Products & services</h1>
+                <h1 style=" font-size: 150%; text-align: right">Products & services</h1>
             </div>
             <div></div>
             <div>
@@ -102,10 +113,7 @@
                 <h2 style=" font-size: 125% ;text-align: end;">schols&colleges</h2>
             </div>
             <div>
-                <h2 style=" font-size: 125%;">Training institute</h2>
-            </div>
-            <div>
-                <h2></h2>
+                <h2 style=" font-size: 125%;text-align: end">Training institute</h2>
             </div>
         </section>
     </body>
