--- a/Task/Task01.html
+++ b/Task/Task01.html
@@ -8,7 +8,7 @@
             type="image/png">
         <style>
             #section,
-             div {
+            div {
                 float: left;
                 height: 200px;
                 width: 16.5%;
@@ -35,20 +35,24 @@
             #id4 div {
                 float: left;
                 width: 33.3%;
-                height: 100px;
+                height: 500%;
             }
+
             .button {
-                   border: none;
-                   color: white;
-                   padding: 10px 10px;
-                   text-align: center;
-                   text-decoration: none;
-                   display: inline-block;
-                   font-size: 20px;
-                   margin: 4px 4px;
-                   cursor: pointer;
-                }
-                .button {background-color: rgb(255, 0, 64);}
+                border: none;
+                color: white;
+                padding: 10px 10px;
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+                font-size: 20px;
+                margin: 4px 4px;
+                cursor: pointer;
+            }
+
+            .button {
+                background-color: rgb(255, 0, 64);
+            }
         </style>
     </head>
 
@@ -57,10 +61,18 @@
             <div>
                 <h1 style="font-size: 300%; color: rgb(255, 0, 64);font-style: monaco;"> Kona </h1>
             </div>
-            <div><h3>products</h3></div>
-            <div><h3>solution</h3></div>
-            <div><h3>services</h3></div>
-            <div><h3>pricing</h3></div>
+            <div>
+                <h3>products</h3>
+            </div>
+            <div>
+                <h3>solution</h3>
+            </div>
+            <div>
+                <h3>services</h3>
+            </div>
+            <div>
+                <h3>pricing</h3>
+            </div>
             <button class="button" onclick="alert('try for free')">try for free</button>
         </section>
 
@@ -70,8 +82,8 @@
                     <p style="font-size: 70%;"> The education system is growing beyond Chalk-and-Talk.</p>
                     <p style="font-size: 70%;"> The next generation needs advanced
                         methods of learning and we are equipping those who empower the genZ </p>
-             <button class="button" onclick="alert('know more')">know more</button>   
-             <button class="button" onclick="alert(' Ask for a free demo')">Ask for a free demo</button>        
+                    <button class="button" onclick="alert('know more')">know more</button>
+                    <button class="button" onclick="alert(' Ask for a free demo')">Ask for a free demo</button>
             </div>
             </h1>
             <div>
@@ -81,41 +93,31 @@
 
         <section id="id3">
             <div>
-                <h1>What is LMS?
-                    A learning management system (LMS) allows you to create, distribute, Collaborate and track Leaning
-                    anywhere, on any device.</h1>
+                <img src="C:\1.jpg">
+                <h1>What is LMS?</h1>
+                    <h3>A learning management system (LMS) allows you to create, distribute, Collaborate and track Leaning
+                    anywhere, on any device.</h3>
+                    <h3 style="font-style: normal;color: brown;">know more</h3>
             </div>
             <div>
-                <h1>LMS for Education
-                    Creating a structured learning environment digitally that can lay a strong foundation to a student’s
-                    early years of education.</h1>
+                <img src="C:\2.jpg">
+                <h1>LMS for Education</h1>
+                    <h3>Creating a structured learning environment digitally that can lay a strong foundation to a student’s
+                    early years of education.</h3>
+                    <h3 style="font-style: normal;color: brown;">know more</h3>
             </div>
             <div>
-                <h1>LMS for Institutions
-                    Putting convenience and experience into the focus which empowers both learner and instructor at the
-                    same time.</h1>
+                <img src="C:\3.jpg">
+                <h1>LMS for Institutions</h1>
+                   <h3> Putting convenience and experience into the focus which empowers both learner and instructor at the
+                    same time.</h3>
+                    <h3 style="font-style: normal;color: brown;"> know more</h3>
             </div>
         </section>
+     <section id="id4">
+        
 
-        <section id="id4">
-
-            <div>
-                <h1 style=" font-size: 150%; text-align: right">Products & services</h1>
-            </div>
-            <div></div>
-            <div>
-                <h1 style="font-size: 150%;">solutions</h1>
-            </div>
-            <div>
-                <h2 style=" font-size: 125%; text-align: right;">Crm</h2>
-            </div>
-            <div>
-                <h2 style=" font-size: 125% ;text-align: end;">schols&colleges</h2>
-            </div>
-            <div>
-                <h2 style=" font-size: 125%;text-align: end">Training institute</h2>
-            </div>
-        </section>
+     </section>
     </body>
 
 </html>
