--- a/boxmodel/box.html/box.html
+++ b/boxmodel/box.html/box.html
@@ -16,7 +16,13 @@
                 box-sizing: border-box;
                 font-size: large;
                 height: 200px;
+                display: flex;
 
+            }
+
+            .logo {
+                display: flex;
+                flex: 4;
             }
 
             #id2 div {
@@ -35,7 +41,7 @@
             #id4 div {
                 float: left;
                 width: 33.3%;
-                height: 500%;
+                height: 500px;
             }
 
             .button {
@@ -58,19 +64,19 @@
 
     <body>
         <section>
-            <div>
+            <div class="logo">
                 <h1 style="font-size: 300%; color: rgb(255, 0, 64);font-style: monaco;"> Kona </h1>
             </div>
-            <div>
+            <div class="services">
                 <h3>products</h3>
-            </div>
-            <div>
+            </div> 
+            <div class="services">
                 <h3>solution</h3>
             </div>
-            <div>
+            <div class="services">
                 <h3>services</h3>
             </div>
-            <div>
+            <div class="services">
                 <h3>pricing</h3>
             </div>
             <button class="button" onclick="alert('try for free')">try for free</button>
@@ -87,7 +93,7 @@
             </div>
             </h1>
             <div>
-                <img src="C:\Users\Lenovo\OneDrive\Pictures\Screenshots\kona.png">
+                <img src="C:\Users\Lenovo\OneDrive\Pictures\Screenshots\kona.jpg">
             </div>
         </section>
 
