--- a/gridmodel/gridbox.html
+++ b/gridmodel/gridbox.html
@@ -5,16 +5,31 @@
     <link rel="stylesheet" href="eg02f.css">
 </head>
 <body>
+   <section> <header class="header">
+        <h2 style="font-size: 35px; font-weight: bold;">Netflix</h2>
+    </header> 
+   </section>
     <div class="container">
-       <div class="b1">one</div>
-       <div class="b1">two</div>
-       <div class="b1">three</div>
-       <div class="b1">four</div>
-       <div class="b1">five</div>
-       <div class="b1">six</div>
-       <div class="b1">seven</div>
-       <div class="b1">eight</div>
-       <div class="b1">nine</div>
+       <div class="b1">khushi</div>
+       <div class="b1">Stranger things</div>
+       <div class="b1">education</div>
+       <div class="b1">Four more shots</div>
+       <div class="b1">Rana Naidu</div>
+       <div class="b1">Breaking Bad</div>
+       <div class="b1">13 Reasons Why</div>
+       <div class="b1">Friends</div>
+       <div class="b1">Never Haave I Ever</div>
+       <div class="b1">Tommrow</div>
+       <div class="b1">Lupin</div>
+       <div class="b1">Hidden Love</div>
+       <div class="b1">Away</div>
+       <div class="b1">Lost In Space</div>
+       <div class="b1">Peaky Blinders</div>
+       <div class="b1">7 Days Out</div>
+       <div class="b1">Money Heist</div>
+       <div class="b1">The Walking Dead</div>
+       <div class="b1">Ghost</div>
+       <div class="b1">Manifest</div>
     </div>
 </body>
 </html>
