--- a/flexmodel_css/b01.html
+++ b/flexmodel_css/b01.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Kona lms</title>
-    <link rel="stylesheet" href="./eg02.css">
+    <link rel="stylesheet" href="./b01.css">
 </head>
 <body>
     <section>
