--- a/flexmodel_css/b02.html
+++ b/flexmodel_css/b02.html
@@ -4,7 +4,7 @@
  <html lang="en">
  <head>
     <title>Positions</title>
-    <link rel="stylesheet" href="./bo1.css">
+    <link rel="stylesheet" href="./b02.css">
 </head>
  
  <body> 
