--- a/table/invoice.html
+++ b/table/invoice.html
@@ -92,18 +92,25 @@
                         <td>50.00</td>
                         <td>100.00</td>
                     </tr>
+                   
                     <tr>
                         <td>Item 2</td>
-                        <td>1</td>
-                        <td>75.00</td>
-                        <td>75.00</td>
+                        <td>3</td>
+                        <td>85.00</td>
+                        <td>255.00</td>
+                    </tr>
+                    <tr>
+                        <td>Item 3</td>
+                        <td>4</td>
+                        <td>95.00</td>
+                        <td>380.00</td>
                     </tr>
                 </tbody>
             </table>
         </div>
 
         <div class="total">
-            <p><strong>Grand Total:</strong> 175.00</p>
+            <p><strong>Grand Total:</strong> 735.00</p>
         </div>
 
     </div>
