--- a/restuarant website/restauarant.html
+++ b/restuarant website/restauarant.html
@@ -48,7 +48,7 @@
             width: 100%;
         }
         header img {
-            padding: 5px:
+            padding: 5px;
 
         }
     </style>
