--- a/restuarant website/restauarant.html
+++ b/restuarant website/restauarant.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Max Restaurant</title>
+    <link rel="icon" type="image" href="https://evilmartians.com/static/7ea4633e3a4f32a8bbe6df7296798f0d/6bdd7/cover.png">
     <style>
         body {
             font-family: Georgia, 'Times New Roman', Times, serif;
@@ -42,15 +43,26 @@
             background-color: #333;
             color: white;
             text-align: center;
-            padding: 1em;
-            position: fixed;
-            bottom: 0;
+            padding: 10px;
+            bottom: 0px;
             width: 100%;
         }
-        header img {
-            padding: 5px;
-
+        #menu {  
+            background-color: black;
         }
+        ul {
+            color: goldenrod;
+        }
+        #menu h2 {
+            color: goldenrod;
+        }
+        #main {
+            justify-content: center;
+        }
+        #home {
+            background-color: rgb(255, 253, 208);
+        }
+
     </style>
 </head>
 <body>
@@ -82,6 +94,41 @@
             <li>Desserts</li>
             <li>Beverage</li>
         </ul>
+        <section id="main">
+            <h2>Appetizers</h2>
+            <ul>
+                <li>Relishes & Crudite</li>
+                    <li>Salad</li>
+                    <li>Soup</li>
+                    <li>Chips & Dips</li>
+            </ul>
+            <h2>Main Course</h2>
+            <ul>
+                <li>Chicken Biryani</li>
+                <li>Mutton Biryani</li>
+                <li>Dum Biryani</li>
+                <li>Double Masala Biryani</li>
+            </ul>
+            <h2>Desserts</h2>
+            <ul>
+                <li>Cakes and Cupcakes</li>
+                <li>Brownies</li>
+                <li>Ice Cream</li>
+                <li>S'mores</li>
+            </ul>
+            <h2>Beverage</h2>
+            <ul>
+                <li>Soft Drinks</li>
+                <li>Jucie</li>
+                <li>Wine</li>
+                <li>Beer</li>
+            </ul>
+
+
+        </section>
+    </section>
+    <section>
+        <img src="https://elements-cover-images-0.imgix.net/eb41c99b-5384-4b5b-85c7-7bf2b0609848?auto=compress%2Cformat&w=1370&fit=max&s=ef0a0f83f2fa336c65e2d7f3ab1071bf" alt="">
     </section>
 
     <section id="about">
@@ -93,12 +140,8 @@
         <h2>Contact Us</h2>
         <p>Have questions or want to make a reservation? Reach out to us!</p>
         <address>
-            Email: info@max.com<br>
-            Phone: 7396242454
+            Email: bhargavadulapuram98@gmail.com <p>Phone: 7396242454</p>
         </address>
-    </section>
-    <section>
-        <img src="https://elements-cover-images-0.imgix.net/eb41c99b-5384-4b5b-85c7-7bf2b0609848?auto=compress%2Cformat&w=1370&fit=max&s=ef0a0f83f2fa336c65e2d7f3ab1071bf" alt="">
     </section>
 
     <footer>
