--- a/JavaScript/1.html
+++ b/JavaScript/1.html
@@ -87,6 +87,66 @@
         function showAlertMessage(){
             window.alert('My Self Bhargav Adulapuram');
         }
+
+        // operators //
+
+        // arthematic operators //
+
+        var nums = [28,33,44,55];
+
+        var sum = 1;
+
+        sum = sum + nums[1];
+
+        console.log(sum)
+
+        var nums = [33 , 55 ,66 ,333];
+
+        var sum = 3;
+
+        sum = sum * nums[1];
+
+        console.log(sum)
+
+        // assignment operators //
+
+        var nums = [33, 55, 66, 77];
+
+        var sum = 5;
+
+        sum += nums[1];
+
+        console.log(sum)
+
+
+        var nums = [33, 55, 66, 77];
+
+         var sum = 5;
+
+         sum -= nums[1];
+
+           console.log(sum)
+
+           var nums = [33, 55, 66, 77];
+
+             var sum = 5;
+
+                sum *= nums[1];
+
+                 console.log(sum)
+
+
+    // comparison operators//
+
+    
+
+ 
+
+
+
+
+
+
     
  
 
